Fix CSS (card shift on flip)
Card class must contain MAX-WIDTH with value (widthOfPic + 2 * border),
or card will shift on flip (transform-rotate), on the border value.

Tried to use (backface-visibility: hidden;) and
(-webkit-backface-visibility: hidden;) with no success.

--- a/styles.css
+++ b/styles.css
@@ -35,6 +35,7 @@ img{
   transform: scale(1);
   transition: transform .1s;
   cursor:pointer;
+  max-width:92px; /* (widthOfPic + 2* border) */
 }
 
 .card:active {
